--- a/package.json
+++ b/package.json
@@ -30,8 +30,15 @@
     "next-compose-plugins": "^2.1.1",
     "next-fonts": "^0.17.0",
     "next-images": "^1.1.1",
+    "next-redux-saga": "^4.0.1",
+    "next-redux-wrapper": "^3.0.0-alpha.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
+    "redux-saga": "^1.0.2"
   }
 }
