--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "node src/server src/app",
     "build": "next build src/app",
     "start": "next start src/app",
-    "make-assets": "node ./src/scripts/makeAssets.js"
+    "make-assets": "node ./src/scripts/makeAssets.js",
+    "export": "yarn run build && next export src/app"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
