--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "autoprefixer": "^9.4.10",
     "firebase": "^5.8.6",
     "js-simple-utils": "^1.0.5",
@@ -37,6 +38,7 @@
     "next-images": "^1.1.1",
     "next-redux-saga": "^4.0.1",
     "next-redux-wrapper": "^3.0.0-alpha.2",
+    "notistack": "^0.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
