--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "author": "shaunsaker <shaun@aux.co.za>",
   "license": "MIT",
   "scripts": {
-    "dev": "node src/server src/app",
+    "dev": "next dev src/app",
     "build": "next build src/app",
     "start": "next start src/app",
-    "make-assets": "node ./src/scripts/makeAssets.js",
-    "export": "yarn run build && next export src/app"
+    "export": "next export src/app --outdir dist",
+    "make-assets": "node ./src/scripts/makeAssets.js"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
