--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "autoprefixer": "^9.4.10",
+    "dotenv": "^7.0.0",
     "firebase": "^5.8.6",
     "js-simple-utils": "^1.0.5",
     "next": "^8.0.3",
@@ -61,6 +62,7 @@
     "next-redux-saga": "^4.0.1",
     "next-redux-wrapper": "^3.0.0-alpha.2",
     "notistack": "^0.5.1",
+    "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
