--- a/package.json
+++ b/package.json
@@ -7,20 +7,40 @@
   "author": "shaunsaker <shaun@aux.co.za>",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev src/app",
-    "build": "next build src/app",
-    "start": "next start src/app",
+    "dev": "cp ./src/app/.env.dev ./src/app/.env && next dev ./src/app",
+    "start": "next start ./src/app",
+    "storybook": "start-storybook -p 6006 -s ./src/app",
+    "build-storybook": "build-storybook -c .storybook -o ./dist/storybook -s ./dist",
+    "test": "jest",
+    "clean": "rimraf ./src/app/.next ./dist",
+    "prebuild": "yarn run clean",
+    "build": "next build ./src/app",
     "export": "next export src/app --outdir dist",
     "postexport": "yarn run makeassets",
     "makeassets": "node ./src/scripts/makeAssets.js",
     "postmakeassets": "yarn run copyassets",
     "copyassets": "cp -a ./src/public/. ./dist/",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "test": "jest",
     "update-changelog": "yarn run auto-changelog && git add . && git commit -m 'Update Changelog' && git push",
     "update-tags": "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags",
-    "publish": "yarn run update-changelog && yarn run update-tags"
+    "publish": "yarn run update-changelog && yarn run update-tags",
+    "build-development": "cp ./src/app/.env.dev ./src/app/.env && yarn run build && yarn run export && yarn run build-storybook",
+    "build-testing": "cp ./src/app/.env.testing ./src/app/.env && yarn run build && yarn run export && yarn run build-storybook",
+    "build-staging": "cp ./src/app/.env.staging ./src/app/.env && yarn run build && yarn run export && yarn run build-storybook",
+    "build-production": "cp ./src/app/.env.prod ./src/app/.env && yarn run build && yarn run export && yarn run build-storybook",
+    "deploy": "firebase deploy",
+    "deploy-development": "firebase use development && yarn run deploy",
+    "deploy-testing": "firebase use testing && yarn run deploy",
+    "deploy-staging": "firebase use staging && yarn run deploy",
+    "deploy-production": "firebase use production && yarn run deploy",
+    "deploy-all-no-prod": "yarn run build-development && yarn run deploy-development && yarn run build-testing && yarn run deploy-testing && yarn run build-staging && yarn run deploy-staging",
+    "deploy-all": "yarn run build-development && yarn run deploy-development && yarn run build-testing && yarn run deploy-testing && yarn run build-staging && yarn run deploy-staging && yarn run build-production && yarn run deploy-production",
+    "db-backup": "firestore-backup-restore --accountCredentials ./src/config/firebase/development/credentials.json --backupPath ./src/database",
+    "db-restore-development": "firestore-backup-restore --restoreAccountCredentials ./src/config/firebase/development/credentials.json --backupPath ./src/database",
+    "db-restore-testing": "firestore-backup-restore --restoreAccountCredentials ./src/config/firebase/testing/credentials.json --backupPath ./src/database",
+    "db-restore-staging": "firestore-backup-restore --restoreAccountCredentials ./src/config/firebase/staging/credentials.json --backupPath ./src/database",
+    "db-restore-production": "firestore-backup-restore --restoreAccountCredentials ./src/config/firebase/production/credentials.json --backupPath ./src/database",
+    "db-restore-all-no-prod": "yarn run db-restore-development && yarn run db-restore-testing && yarn run db-restore-staging",
+    "db-restore-all": "yarn run db-restore-development && yarn run db-restore-testing && yarn run db-restore-staging && yarn run db-restore-production"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
@@ -43,10 +63,12 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "express": "^4.16.4",
+    "firestore-backup-restore": "^1.3.1",
     "jest": "^24.5.0",
     "prettier": "^1.16.4",
     "prettier-config-aux": "^1.0.1",
-    "react-test-renderer": "^16.8.4"
+    "react-test-renderer": "^16.8.4",
+    "rimraf": "^2.6.3"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
