--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "prettier": "^1.18.2",
     "prettier-config-aux": "^1.0.3",
     "react-test-renderer": "^16.8.6",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "storybook-addon-material-ui": "^0.9.0-alpha.20"
   },
   "dependencies": {
     "@material-ui/core": "^4.1.3",
